--- a/templates/actor/Simple Vehicle-sheet.html
+++ b/templates/actor/Simple Vehicle-sheet.html
@@ -49,7 +49,7 @@
               <td>{{actor.system.vehicle.crew}}+{{actor.system.vehicle.passengers}}{{actor.system.vehicle.occCode}}</td>
               <td>{{displaySimpleVehicleArmour actor.system.vehicle}}</td>
               <td>{{actor.system.vehicle.range}}</td>
-              <td>{{displayCurrencyNoDecimals actor.system.cost.finalCost}}$</td>
+              <td>{{displayCurrencyComplex actor.system.cost.finalCost}}$</td>
               <td>{{actor.system.vehicle.locations}}</td>
               {{#if (eq actor.system.vehicle.craftType "water")}}
               <td>{{actor.system.vehicle.draft}} ft</td>
@@ -1348,7 +1348,7 @@
             <td class="actor-sheet-digit-col"><span>{{item.system.tl}}</span></td>
             <td class="actor-sheet-digit-col"><span>{{item.system.lc}}</span></td>
             <td class="actor-sheet-digit-col"><span>{{item.system.quantity}}</span></td>
-            <td class="actor-sheet-digit-col"><span>{{displayCurrency item.system.ttlCost}} $</span></td>
+            <td class="actor-sheet-digit-col"><span>{{displayCurrencyComplex item.system.ttlCost}} $</span></td>
             <td class="actor-sheet-digit-col"><span>{{round item.system.ttlWeight 100}} lb{{checkPlural item.system.ttlWeight}}</span></td>
             <td style="width: 62px;"><span>{{equipStatusToString item.system.equipStatus}}</span></td>
             <td class="item-controls" style="width: 30px;">
