Changed Default link to button

--- a/templates/item/Consolidated-Item-sheet.html
+++ b/templates/item/Consolidated-Item-sheet.html
@@ -1749,7 +1749,9 @@
         {{#if (eq item.type "Rollable") }}
         {{!-- Defaults Tab --}}
         <div class="tab stats" data-tab="defaults" data-group="primary">
-            <h3 class="addDefaultRow" style="text-align: right;">Add Default</h3>
+            <div style="text-align: right">
+                <input type='button' style="text-align: right;" class="addDefaultRow" value='Add Default'/>
+            </div>
             <div class="tab">
                 <table>
                     <tr class="equipment-header">
