Added two more ER entries

--- a/gurps4e.css
+++ b/gurps4e.css
@@ -498,9 +498,15 @@
 }
 
 .erRowLabel,
-.fpRowLabel,
 .hpRowLabel {
 	font-weight: bold;
+}
+
+.erRowLabel {
+	text-align: left !important;
+	padding: 0 !important;
+	margin: 0 !important;
+	width: 100% !important;
 }
 
 .reserves-header .title {
