--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -68,6 +68,18 @@
 						<input class="erRow" type="text" name="system.reserves.er.max" 	value="{{actor.system.reserves.er.max}}" data-dtype="Number" disabled />
 						<input class="erRow" type="text" name="system.reserves.er.mod" 	value="{{actor.system.reserves.er.mod}}" data-dtype="Number" />
 						<input class="erRow" type="text" name="system.reserves.er.points" value="{{actor.system.reserves.er.points}}" data-dtype="Number" />
+
+						<input class="erRow erRowLabel" type="text" name="system.reserves.erA.abbr" 	value="{{actor.system.reserves.erA.abbr}}" data-dtype="String"/>
+						<input class="erRow" type="text" name="system.reserves.erA.value" 	value="{{actor.system.reserves.erA.value}}" data-dtype="Number"/>
+						<input class="erRow" type="text" name="system.reserves.erA.max" 	value="{{actor.system.reserves.erA.max}}" data-dtype="Number" disabled />
+						<input class="erRow" type="text" name="system.reserves.erA.mod" 	value="{{actor.system.reserves.erA.mod}}" data-dtype="Number" />
+						<input class="erRow" type="text" name="system.reserves.erA.points" 	value="{{actor.system.reserves.erA.points}}" data-dtype="Number" />
+
+						<input class="erRow erRowLabel" type="text" name="system.reserves.erB.abbr" 	value="{{actor.system.reserves.erB.abbr}}" data-dtype="String"/>
+						<input class="erRow" type="text" name="system.reserves.erB.value" 	value="{{actor.system.reserves.erB.value}}" data-dtype="Number"/>
+						<input class="erRow" type="text" name="system.reserves.erB.max" 	value="{{actor.system.reserves.erB.max}}" data-dtype="Number" disabled />
+						<input class="erRow" type="text" name="system.reserves.erB.mod" 	value="{{actor.system.reserves.erB.mod}}" data-dtype="Number" />
+						<input class="erRow" type="text" name="system.reserves.erB.points" 	value="{{actor.system.reserves.erB.points}}" data-dtype="Number" />
 					</div>
 				</div>
 
